--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@tanstack/react-query": "^5.13.4",
@@ -21,6 +22,7 @@
     "react-native-screens": "^3.27.0",
     "react-native-svg": "^14.1.0",
     "react-native-svg-transformer": "^1.1.0",
+    "react-native-toast-notifications": "^3.4.0",
     "react-redux": "^9.0.4",
     "yup": "^1.3.2"
   },
