--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@reduxjs/toolkit": "^2.0.1",
     "@tanstack/react-query": "^5.13.4",
     "axios": "^1.6.2",
     "formik": "^2.4.5",
@@ -23,6 +24,7 @@
     "react-native-svg": "^14.1.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-toast-notifications": "^3.4.0",
+    "react-redux": "^9.0.4",
     "yup": "^1.3.2"
   },
   "devDependencies": {
