--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "formik": "^2.4.5",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-safe-area-context": "^4.7.4",
