--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.72.7",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-select-dropdown": "^3.4.0",
     "react-native-svg": "^14.1.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-toast-notifications": "^3.4.0",
