--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "lodash": "^4.17.21",
     "react": "18.2.0",
+    "react-content-loader": "^6.2.1",
     "react-native": "0.72.7",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
-    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "^14.1.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-toast-notifications": "^3.4.0",
