--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@realm/react": "^0.6.2",
     "@reduxjs/toolkit": "^2.0.1",
     "@sentry/react-native": "^5.15.2",
     "axios": "^1.6.2",
@@ -24,6 +25,7 @@
     "react-content-loader": "^6.2.1",
     "react-native": "0.72.7",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-get-random-values": "^1.10.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
@@ -32,6 +34,7 @@
     "react-native-toast-notifications": "^3.4.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.0.4",
+    "realm": "^12.5.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
