--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@realm/react": "^0.6.2",
     "@reduxjs/toolkit": "^2.0.1",
     "@sentry/react-native": "^5.15.2",
+    "@types/mocha": "^10.0.6",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
@@ -45,7 +46,9 @@
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tanstack/eslint-plugin-query": "^5.12.1",
+    "@testing-library/react-native": "^12.4.4",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
