--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/netinfo": "^11.2.1",
     "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@realm/react": "^0.6.2",
@@ -26,8 +27,11 @@
     "react-content-loader": "^6.2.1",
     "react-native": "0.72.7",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-gesture-handler": "^2.17.1",
     "react-native-get-random-values": "^1.10.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modalfy": "^3.5.3",
+    "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-svg": "^14.1.0",
